test/test_error_locations/test_ppx_css_syntax_error_location.mlt
open! Core
module Virtual_dom = Fake_ppx_css_runtime_for_native_tests
open Virtual_dom;;

#print_line_numbers true

let x : Virtual_dom.Vdom.Attr.t =
  [%css
    {|
  width: %{let x = };
|}]
;;

[%%expect
  {|
Line 10, characters 11-19:
Error: invalid %{...} expression: "let x = "
|}]

(* The above error location is correct. *)
